--- a/mystaticfiles/style3.css
+++ b/mystaticfiles/style3.css
@@ -117,6 +117,10 @@
     color: #bbb;
   }
 
+  #ip-form-input {
+    display: none;
+  }
+
   .sign-in-button {
     font-family: "Inter", sans-serif;
     font-weight: 400;
