--- a/mayne/templates/mayne/pot_covers.html
+++ b/mayne/templates/mayne/pot_covers.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     {% for cover in pc %}
-        {{cover.epot_cover}}, {{cover.ppot_cover}}
+        {{cover.epot_cover}}, {{cover.ppot_cover}}, {{cover.ipot_cover}}
         <br>
     {% endfor%}
 
