--- a/mayne/templates/mayne/base.html
+++ b/mayne/templates/mayne/base.html
@@ -70,7 +70,7 @@
             <div class="header-right">
                 <div class="sign-in">
                     <a href="/under_construction" id="sign-in-text" class="sign-in-text">Sign Up or Log In</a>
-                    <i id="user-icon" class="fa-regular fa-circle-user"></i>
+                    <i onclick="dontWork()" id="user-icon" class="fa-regular fa-circle-user"></i>
                 </div>
                 <a href="/under_construction"><i id="search-icon" class="fa-solid fa-magnifying-glass"></i></a>
                 <i id="ham" class="fas fa-bars" onclick="show()"></i>
